--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,7 @@ crashlytics-build.properties
 # Assets
 Assets/Japanese Coin
 Assets/Japanese Coin.meta
+Assets/TZ_Futuristic Panel Textures Lite
+Assets/TZ_Futuristic Panel Textures Lite.meta
+Assets/YughuesFreeMetalMaterials
+Assets/YughuesFreeMetalMaterials.meta
