大体の動作できあがった

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,7 @@ Assets/TZ_Futuristic Panel Textures Lite
 Assets/TZ_Futuristic Panel Textures Lite.meta
 Assets/YughuesFreeMetalMaterials
 Assets/YughuesFreeMetalMaterials.meta
+Assets/Shapes2D
+Assets/Shapes2D.meta
+Assets/TextMesh Pro
+Assets/TextMesh Pro.meta
